<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>info.quantlab</groupId>
	<artifactId>numerical-methods-lecture</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<name>Numerical Methods Lectures</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- libs -->
		<finmath-lib.version>6.0.10</finmath-lib.version>
		<finmath-plot.version>0.4.8</finmath-plot.version>
		<junit.version>5.6.2</junit.version>
		<!-- maven plugins -->
		<compiler-plugin.version>3.8.1</compiler-plugin.version>
		<maven.source-plugin.version>3.2.1</maven.source-plugin.version>
		<maven.javadoc-plugin.version>3.3.2</maven.javadoc-plugin.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>net.finmath</groupId>
			<artifactId>finmath-lib</artifactId>
			<version>${finmath-lib.version}</version>
		</dependency>
		<dependency>
			<groupId>net.finmath</groupId>
			<artifactId>finmath-lib-plot-extensions</artifactId>
			<version>${finmath-plot.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>${junit.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${compiler-plugin.version}</version>
				<configuration>
					<source>17</source>
					<target>17</target>
					<compilerVersion>17</compilerVersion>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${maven.source-plugin.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>${maven.javadoc-plugin.version}</version>
			</plugin>
		</plugins>
	</build>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>GitHub qntlb Apache Maven Packages</name>
			<url>file:///${project.basedir}/local-maven-repo</url>
		</repository>
	</distributionManagement>
</project>